[package]
name = "helium-service"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
base64 = "0.22"
brotli = "8"
bytes = "1"
dotenvy = "0.15"
fastrand = "2"
flate2 = "1"
futures-util = "0.3"
hmac = "0.12"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
